--- a/src/renderer/src/assets/editor.css
+++ b/src/renderer/src/assets/editor.css
@@ -4,4 +4,5 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  padding-bottom: 50px;
 }
